      system.  Reported by Josselin Mouette.  (Closes: #395468)
  * checks/fields{.desc,}:
    + [RA] Clarify in missing-build-dependency why lintian does not take
      into account transitive build dependencies.  (Closes: #393975)
    + [RA] Avoid Perl warning when diagnosing a Python-Version of the form
      "all, >= 2.4".  Thanks, Thijs Kinkhorst.  (Closes: #394104)
  * checks/menu.desc:
    + [RA] Remove stray commas in Ref strings since the reporting code
      considers commas to be separating two different references.
  * checks/shared-libs:
    + [RA] Calling ldconfig is also required for libraries installed in
      various subdirectories of its standard search path based on hardware
      capabilities.  Reported by Aurelien Jarno.  (Closes: #396278)

 -- Russ Allbery <rra@debian.org>  Fri, 10 Nov 2006 20:56:37 -0800

lintian (1.23.25) unstable; urgency=low

  The "dependency and debconf" release

  * checks/debconf:
    + [CW] Don't trigger partially-translated-question when Choices-C exists
      but not Description-C.
    + [RA] Remove select-with-translated-default-field since there are
      cases where this is correct and we can perform a better check
      against the source package.  Patch from Thomas Huriaux.
    + [RA] Fix Perl warnings when a template has no type.
  * checks/debdiff:
    + [RA] Remove the source-tar-is-posix-tar tag.  This was only a
      problem for woody and earlier, and woody support is no longer
      needed.  Reported by Loïc Minier.  (Closes: #385833)
  * checks/fields{.desc,}:
    + [RA] Improve the long descriptions of the warnings about dependencies
      on essential or build-essential packages to make it clearer that the
      correct resolution is normally to omit the dependency and why.
    + [RA] Add a check for duplicate build dependencies.  (Closes: #359178)
  * checks/files:
    + [RA] Don't consider files named license.rb to be extraneous
      licenses.  Patch from NIIBE Yutaka.  (Closes: #387269)