@@ -36,7 +36,7 @@ my %conffile;
 
 # Is there a md5sums control file?
 unless (-f $control) {
-    # no, skip this package
+    tag "no-md5sums-control-file", "";
     return 0;
 }
 
@@ -51,8 +51,11 @@ open(C, $control) or fail("cannot open md5sums control file $control: $!");
 while (<C>) {
     chop;
     next if m/^\s*$/;
-    m{^(\S+)\s*(?:\./)?(\S.*)$} or fail("syntax error in md5sums control file: $_");
-    $control_entry{$2} = $1;
+    if (m{^([a-f0-9]+)\s*(?:\./)?(\S.*)$} && length($1) == 32) {
+	$control_entry{$2} = $1;
+    } else {
+	tag "malformed-md5sums-control-file", "line $.";
+    }
 }
 close(C);
 
