@@ -6,16 +6,35 @@ Type: binary
 Unpack-Level: 1
 Needs-Info: md5sums
 Info: This script checks if md5sum control files are valid, if they are
- provided by a binary package. (All packages not containing a md5sums
- control file are skipped.)
+ provided by a binary package.
+
+Tag: no-md5sums-control-file
+Type: info
+Info: This package does not contain an md5sums control file.  This control
+ file listing the MD5 checksums of the contents of the package is not
+ required, but if present debsums can use it to verify that no files
+ shipped with your package have been modified.  Providing it is
+ recommended.
+ .
+ If you are using debhelper to create your package, just add a call to
+ <tt>dh_md5sums</tt> at the end of your binary-indep or binary-arch
+ target, right before <tt>dh_builddeb</tt>.
 
 Tag: md5sums-control-file-is-empty
 Type: error
 Info: The package contains an md5sums control file, but it lists no files.
 
+Tag: malformed-md5sums-control-file
+Type: error
+Info: The indicated line of the md5sums control file for this package was
+ malformed.  Each line of an md5sums control file should contain an MD5
+ checksum, some whitespace, and then the path to the file corresponding to
+ that checksum.
+
 Tag: md5sum-mismatch
 Type: error
-Info: The md5sum listed for the file does not match the actual file contents.
+Info: The md5sum listed for the file does not match the actual file
+ contents.
  .
  Usually, this error occurs during the package build process, if the
  <tt>debian/tmp/</tt> directory is touched after <tt>dh_md5sums</tt> or
@@ -23,7 +42,8 @@ Info: The md5sum listed for the file does not match the actual file contents.
 
 Tag: md5sums-lists-nonexisting-file
 Type: error
-Info: The md5sums control file lists a file which is not included in the package.
+Info: The md5sums control file lists a file which is not included in the
+ package.
  .
  Usually, this error occurs during the package build process, if the
  <tt>debian/tmp/</tt> directory is touched after <tt>dh_md5sums</tt> or
@@ -35,7 +55,7 @@ Info: The md5sums control file lists a file which is not included in the package
  updated debstd should fix the problem.
 
 Tag: file-missing-in-md5sums
-Type: error
+Type: warning
 Info: The package contains a file which isn't listed in the md5sums control
  file.
  .
