@@ -1,8 +1,14 @@
 E: etcfiles source: debian-rules-missing-required-target binary-arch
 E: etcfiles: file-in-etc-not-marked-as-conffile /etc/improper
 E: etcfiles: file-in-etc-not-marked-as-conffile /etc/improper-link
+E: etcfiles: malformed-md5sums-control-file line 4
+E: etcfiles: md5sum-mismatch etc/improper
+E: etcfiles: md5sum-mismatch etc/proper
+E: etcfiles: md5sums-lists-nonexisting-file usr/bin/foo
 E: etcfiles: no-copyright-file
 W: etcfiles source: ancient-standards-version 3.5.0 (current is 3.7.2)
 W: etcfiles: changelog-file-not-compressed changelog
+W: etcfiles: file-missing-in-md5sums etc/improper-link
+W: etcfiles: file-missing-in-md5sums usr/share/doc/etcfiles/changelog
 W: etcfiles: non-etc-file-marked-as-conffile /var/lib/foo
 W: etcfiles: package-contains-hardlink etc/improper-link -> etc/improper
