@@ -27,6 +27,7 @@ E: filenames: symlink-should-be-relative usr/lib/filenames/symlink3wrong /usr/li
 E: filenames: use-of-compat-symlink usr/bin/X11/
 E: filenames: use-of-compat-symlink usr/bin/X11/testxbin
 I: filenames source: arch-inventory-file-in-source files/.arch-inventory
+I: filenames: no-md5sums-control-file
 W: filenames source: ancient-standards-version 3.1.1 (current is 3.7.2)
 W: filenames source: source-contains-CVS-dir CVS
 W: filenames source: source-contains-arch-control-dir .arch-ids
