@@ -15,6 +15,7 @@ E: maintainer-scripts: postrm-does-not-call-updaterc.d-for-init.d-script /etc/in
 E: maintainer-scripts: preinst-calls-updaterc.d bar
 E: maintainer-scripts: prerm-calls-updaterc.d foo
 E: maintainer-scripts: wrong-debian-qa-group-name QA group <packages@qa.debian.org>
+I: maintainer-scripts: no-md5sums-control-file
 I: maintainer-scripts: output-of-updaterc.d-not-redirected-to-dev-null bar postrm
 I: maintainer-scripts: possible-non-posix-code-in-maintainer-script postinst:4 '[ -d /usr/doc -a ! -e /usr/doc/maintainer-scripts -a '
 I: maintainer-scripts: possible-non-posix-code-in-maintainer-script prerm:25 '   local '
