@@ -15,6 +15,7 @@ E: scripts: shell-script-fails-syntax-check ./usr/share/scripts/gccbug.dpatch
 E: scripts: suid-perl-script-but-no-perl-suid-dep ./usr/bin/suidperlfoo2
 E: scripts: wrong-path-for-interpreter #!/usr/local/bin/lefty != /usr/bin/lefty (./usr/bin/lefty-foo)
 E: scripts: wrong-path-for-ruby ./usr/bin/rubyfoo #!/bin/ruby1.8
+I: scripts: no-md5sums-control-file
 W: scripts source: ancient-standards-version 3.2.1 (current is 3.7.2)
 W: scripts source: changelog-should-mention-nmu
 W: scripts source: maintainer-script-lacks-debhelper-token debian/postinst
